Fix date parseing failure

--- a/filter-50-errorlog.conf
+++ b/filter-50-errorlog.conf
@@ -6,7 +6,7 @@ filter {
     overwrite => "message"
   }
   date {
-    match => ["timestamp","ISO8601"]
+    match => ["timestamp","YYYY-MM-dd HH:mm:ss", "ISO8601"]
     id => mysql_errorlog_date
   }
   mutate {
